initial commit Obfuscate 07/10/2021

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,6 @@ screenlog.0
 /trash
 /system_confs/system_vars.json
 /server/view/public/downloads
+
+#Sensitive conf info
+/server/core/config.json
