--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "express": "^4.17.0",
   "express-handlebars": "^3.1.0",
   "express-session": "^1.17.1",
+  "feed-reader": "^1.1.6",
   "joi": "^17.3.0",
   "lodash": "^4.17.20",
   "minimist": "^1.2.5",
